# jarijaba

./: .gitignore  README.md  env.example  ersreneleeDocumentsLGprompthonjarijaba; git reset --soft HEAD~1  main.py  naver.py  pyproject.toml  run.py  temp.html  test_autoschedule.py
app/: __init__.py  config.py  logger.py  main.py  models.py
app/agents/: restaurant_agent.py
app/services/: naver_search_service.py  outlook_service.py
schedule-manager/: .env  README.md  main.py  requirements.txt
schedule-manager/src/: agent.py  api.py  auth.py  cli.py  config.py  env.py  get_icaluid.py  graph_client.py  rsvp.py  teams.py  temp.py  workflow.py
vote_bot/: adaptive_cards.py  app.py  db.py  polls.db  swagger.json  vote.db  vote_api.py
